--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,13 +7,13 @@
   align-items: center;
 
   > h1 {
-    margin-top: 75px;
+    margin-top: 25px;
+    margin-bottom: 50px;
     text-align: center;
   }
 
   .insert-item {
     width: 775px;
-    margin-top: 50px;
 
     fieldset {
       border: 4px solid black;
@@ -49,13 +49,16 @@
   }
 
   .show-item {
+    height: 300px;
     width: 775px;
+    overflow: auto;
+    border: 4px solid black;
 
     table {
+      height: 400px;
       table-layout: fixed;
       width: 100%;
       border-collapse: collapse;
-      border: 4px solid black;
       text-align: left;
 
       thead {
@@ -64,8 +67,10 @@
             white-space: nowrap;
             padding: 0 15px;
             height: 40px;
-
             background-color: grey;
+            position: sticky;
+            top: 0;
+            z-index: 99;
           }
         }
       }
@@ -73,9 +78,12 @@
       tbody {
         tr {
           td {
-            white-space: nowrap;
             padding: 0 15px;
             height: 40px;
+
+            a {
+              display: block;
+            }
           }
         }
 
